# create-branch.action

./: .git_archival.txt  Dockerfile  README.md  action.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/create_branch/: __init__.py  cli.py
