[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 3.4",
    "setuptools_scm_git_archive",
    "wheel",
]
build-backend = "setuptools.build_meta"

# Infer version number from source-control management (e.g. Git)
[tool.setuptools_scm]
write_to = "src/create_branch/_version.py"
write_to_template = "__version__ = '{version}'"
